--- a/web-app/tds/web-app/css/legacy/assetExplorer/tds-angular-component.sass
+++ b/web-app/tds/web-app/css/legacy/assetExplorer/tds-angular-component.sass
@@ -6,6 +6,11 @@
 
 .tds-angular-component-content
   display: table
+  #add-person
+    padding-left: 7px
+    font-weight: normal
+    color: red
+    cursor: pointer
   .dialog-container
     border: 1px solid transparent
     padding: 0
@@ -309,4 +314,3 @@
     height: 29.2px !important
   li.move-bundle-item .k-state-selected
     font-weight: bold !important
-
