TM-10809 Move style to sass file

--- a/web-app/tds/web-app/css/page/index.sass
+++ b/web-app/tds/web-app/css/page/index.sass
@@ -3,6 +3,7 @@
 @import "module/assetExplorer/asset-dependency-component"
 @import "module/assetExplorer/asset-explorer-report-selector-component"
 @import "module/assetExplorer/asset-explorer-view-save-component"
+@import "module/assetExplorer/add-person-component"
 @import "module/assetExplorer/bulk-change-button-component"
 @import "module/assetExplorer/bulk-change-actions-component"
 @import "module/assetExplorer/bulk-change-edit-component"
