--- a/web-app/tds/web-app/css/page/module/dataIngestion/data-script-etl-builder-component.sass
+++ b/web-app/tds/web-app/css/page/module/dataIngestion/data-script-etl-builder-component.sass
@@ -22,6 +22,10 @@
         display: flex
         flex-direction: row
         justify-content: space-between
+        padding-bottom: 5px
+        height: auto
+        .tool-box
+          align-items: baseline
   .btn-resize
     font-size: 14px
   hr
@@ -60,3 +64,10 @@
 
     button i
       padding-right: 0px !important
+
+  .sample-data-cell-max-line-height
+    display: block
+    text-overflow: ellipsis
+    max-height: 9.8em
+    line-height: 1.4em
+    word-break: break-word
