TM-11433 Created Controller Specific for the Event Edit Form.

--- a/web-app/css/page/module/planning/moveEventCreateEdit.sass
+++ b/web-app/css/page/module/planning/moveEventCreateEdit.sass
@@ -7,6 +7,11 @@ div.content-wrapper
       table
         border-spacing: 2px
         border-collapse: initial
+        td.name
+          label
+            margin-top: 7px
+          label.tag-title
+            margin-top: 10px
       .asset-tag-selector-component
         .k-widget li .k-icon
           padding-top: 13px !important
