TM-11433 Implemented Promises to handle the update of Asset Tag before to submit the Form

--- a/web-app/css/page/module/planning/moveEventCreateEdit.sass
+++ b/web-app/css/page/module/planning/moveEventCreateEdit.sass
@@ -13,6 +13,8 @@ div.content-wrapper
           label.tag-title
             margin-top: 10px
       .asset-tag-selector-component
+        .k-multiselect .k-multiselect-wrap ul
+          max-width: inherit
         .k-widget li .k-icon
           padding-top: 13px !important
         .km-switch
