--- a/web-app/tds/web-app/css/elements/general/dialog.sass
+++ b/web-app/tds/web-app/css/elements/general/dialog.sass
@@ -44,9 +44,9 @@ div.modal-dialog
         line-height: inherit !important
         font-family: Trebuchet MS, Tahoma, Verdana, Arial, sans-serif !important
       .tool-box
-        display: flex;
-        justify-content: center;
-        align-items: center;
+        display: flex
+        justify-content: center
+        align-items: center
         .full-screen, .restore-screen, .close-screen
           background: transparent
           margin-left: 10px
