--- a/web-app/tds/web-app/app-js/modules/assetExplorer/components/device/manufacturer/components/manufacturer-show/manufacturer-show.component.html
+++ b/web-app/tds/web-app/app-js/modules/assetExplorer/components/device/manufacturer/components/manufacturer-show/manufacturer-show.component.html
@@ -18,7 +18,7 @@
                             </div>
 	                        <div class="form-group">
 		                        <div class="col-md-3">AKA:</div>
-		                        <div class="col-md-9">{{alias}}</div>
+		                        <div class="col-md-9">{{deviceManufacturer.aka}}</div>
 	                        </div>
 	                        <div class="form-group">
 		                        <div class="col-md-3">Description</div>
@@ -29,6 +29,9 @@
                 </div>
             </div>
             <div class="modal-footer form-group-center">
+	            <button type="button" class="btn btn-primary pull-left" (click)="onEditManufacturer()" ><span
+			            class="fa fa-fw fa-floppy-o"></span> Edit
+	            </button>
                 <button type="button" class="btn btn-default pull-right" (click)="cancelCloseDialog()">
                     <span class="glyphicon glyphicon-ban-circle"></span>
                     <span>Cancel</span>
