TM-11433 Finished the Edit and View of Event Tags.

--- a/web-app/css/elements/component/tds-asset-tag-selector.sass
+++ b/web-app/css/elements/component/tds-asset-tag-selector.sass
@@ -122,3 +122,20 @@
   background-color: white !important
 .tag-unselected
   background-color: unset !important
+
+.asset-tag-selector-component-content
+  .label.tag
+    display: inline-block
+    margin-right: 2px
+    margin-bottom: 2px
+    vertical-align: baseline
+    text-align: center
+    width: inherit
+    height: 28px
+    font-weight: 600
+    padding-left: 10px
+    padding-right: 10px
+    padding-top: 7px
+    font-size: 13px
+    font-family: 'Source Sans Pro','Helvetica Neue',Helvetica,Arial,sans-serif
+    color: $c_grey4 !important
