--- a/web-app/tds/web-app/app-js/modules/assetExplorer/components/device/manufacturer/components/manufacturer-edit/manufacturer-edit.component.html
+++ b/web-app/tds/web-app/app-js/modules/assetExplorer/components/device/manufacturer/components/manufacturer-edit/manufacturer-edit.component.html
@@ -1,6 +1,6 @@
-<div class="modal fade in device-manufacturer-edit-component" id="device-manufacturer-edit-component" data-backdrop="static" tabindex="-1" role="dialog">
-    <div class="modal-dialog modal-sm" role="document">
-        <div class="modal-content" [style.width.px]="450">
+<div class="modal fade in manufacturer-edit-component" id="device-manufacturer-edit-component" data-backdrop="static" tabindex="-1" role="dialog">
+    <div class="modal-dialog modal-md" role="document">
+        <div class="modal-content">
             <div class="modal-header">
                 <button (click)="cancelCloseDialog()" type="button" class="close" aria-label="Close">
                     <span aria-hidden="true">×</span>
@@ -33,28 +33,28 @@
                             <div class="form-group">
                                 <div class="col-md-4">Description:</div>
                                 <div class="col-md-8">
-	                                <input type="text" [(ngModel)]="deviceManufacturer.description" name="description" (change)="onChange($event)">
+	                                <input class="corporate-info" type="text" [(ngModel)]="deviceManufacturer.description" name="description" (change)="onChange($event)">
                                 </div>
                             </div>
 
                             <div class="form-group">
                                 <div class="col-md-4">Corporate Name:</div>
                                 <div class="col-md-8">
-	                                <input type="text" [(ngModel)]="deviceManufacturer.corporateName" name="corporateName" (change)="onChange($event)">
+	                                <input class="corporate-info" type="text" [(ngModel)]="deviceManufacturer.corporateName" name="corporateName" (change)="onChange($event)">
                                 </div>
                             </div>
 
                             <div class="form-group">
                                 <div class="col-md-4">Corporate Location:</div>
                                 <div class="col-md-8">
-	                                <input type="text" [(ngModel)]="deviceManufacturer.corporateLocation" name="corporateLocation" (change)="onChange($event)">
+	                                <input class="corporate-info" type="text" [(ngModel)]="deviceManufacturer.corporateLocation" name="corporateLocation" (change)="onChange($event)">
                                 </div>
                             </div>
 
                             <div class="form-group">
                                 <div class="col-md-4">Website:</div>
                                 <div class="col-md-8">
-	                                <input type="text" [(ngModel)]="deviceManufacturer.website" name="website" (change)="onChange($event)">
+	                                <input class="corporate-info" type="text" [(ngModel)]="deviceManufacturer.website" name="website" (change)="onChange($event)">
                                 </div>
                             </div>
                         </div>
