--- a/web-app/tds/web-app/app-js/modules/dataIngestion/components/data-script-etl-builder/data-script-etl-builder.component.html
+++ b/web-app/tds/web-app/app-js/modules/dataIngestion/components/data-script-etl-builder/data-script-etl-builder.component.html
@@ -1,4 +1,4 @@
-<div class="modal fade in data-script-etl-builder-component tds-ui-modal-decorator" id="etlBuilder" data-backdrop="static" tabindex="-1" role="dialog">
+<div class="modal fade in data-script-etl-builder-component tds-ui-modal-decorator" id="etlBuilder" data-backdrop="static" tds-handle-escape (escPressed)="cancelCloseDialog()" tabindex="-1" role="dialog">
 	<div class="modal-dialog modal-lg" role="document">
 		<div #resizableForm class="modal-content resizable"
              tds-ui-modal-decorator=""
