TM-12000 Add selected assets counter label

--- a/web-app/tds/web-app/css/page/module/assetExplorer/asset-explorer-view-grid.component.sass
+++ b/web-app/tds/web-app/css/page/module/assetExplorer/asset-explorer-view-grid.component.sass
@@ -50,3 +50,22 @@
   .text-delimited
     white-space: normal;
     word-wrap: break-word;
+  .k-grid-toolbar
+    display: flex
+    justify-content: space-between
+
+    .bulkchange-section,
+    .filters-section
+      display: flex;
+      align-items: center
+
+    .filters-section
+      justify-content: flex-end
+
+    .bulkchange-section
+      .selected-assets
+        margin-left: 10px
+        .badge-light
+          background-color: #fff
+          color: #777
+
