--- a/web-app/tds/web-app/app-js/modules/assetExplorer/components/view-grid/asset-explorer-view-grid.component.html
+++ b/web-app/tds/web-app/app-js/modules/assetExplorer/components/view-grid/asset-explorer-view-grid.component.html
@@ -5,15 +5,21 @@
  (columnResize)="onWidthChange($event)" (cellClick)="cellClick($event)" [rowClass]="rowCallbackClass">
 
     <!-- Header Toolbar -->
-    <ng-template kendoGridToolbarTemplate [position]="'top'">
-		<div class="col-sm-6">
+    <ng-template kendoGridToolbarTemplate [position]="'top'" class="header-section">
+		<div class="col-sm-6 bulkchange-section">
 			<div class="checkbox pull-left">
 				<label>
 					<input type="checkbox" (change)="onChangeJustPlanning($event.currentTarget.checked)" [(ngModel)]="justPlanning" name="justPlanning"> Just Planning</label>
 			</div>
-			<tds-bulk-change-button [bulkItems]="bulkItems" [enabled]="hasSelectedItems()" (clickBulk)="onClickBulkButton()" (operationResult)="onBulkOperationResult($event)"></tds-bulk-change-button>
+			<tds-bulk-change-button [bulkItems]="bulkItems"
+			                        [enabled]="hasSelectedItems()"
+			                        (clickBulk)="onClickBulkButton()"
+			                        (operationResult)="onBulkOperationResult($event)"></tds-bulk-change-button>
+			<div *ngIf="hasSelectedItems()" class="selected-assets">
+				Asset(s) selected <span class="badge badge-light">{{getSelectedItemsCount()}}</span>
+			</div>
 		</div>
-	    <div class="col-sm-6">
+	    <div class="col-sm-6 filters-section">
 		    <div (click)="onReload()" class="kendo-grid-toolbar__refresh-btn btnReload component-action-reload">
 			    <span class="glyphicon glyphicon-refresh" aria-hidden="true"></span>
 		    </div>
@@ -26,28 +32,22 @@
 	</ng-template>
 
     <!-- Select All column -->
-    <kendo-grid-column title="" [locked]="true" [filterable]="false" [width]="55">
-		<ng-template kendoGridHeaderTemplate>
-			<div class="row">
-				<div class="col-md-12 text-center">
-					<tds-checkbox name="assetsSelector"
-					              [hasThirdState]="true"
-					              (changeState)="onChangeBulkCheckbox($event)"
-					              [setStateSubject]="bulkCheckboxService.setStateSubject"></tds-checkbox>
-				</div>
-			</div>
-		</ng-template>
+    <kendo-grid-column title="" [locked]="true" [width]="55" [filterable]="false">
+	    <ng-template kendoGridHeaderTemplate>
+		    <div class="row">
+			    <div class="col-md-12 text-center">
+				    <tds-checkbox name="assetsSelector"
+				                  [hasThirdState]="true"
+				                  (changeState)="onChangeBulkCheckbox($event)"
+				                  [setStateSubject]="bulkCheckboxService.setStateSubject"></tds-checkbox>
+			    </div>
+		    </div>
+	    </ng-template>
+
 		<ng-template kendoGridCellTemplate let-dataItem>
             <label class="selectall-checkbox-column text-center">
 	            <input type="checkbox" [checked]="bulkCheckboxService.getValueBulkItem(dataItem.common_id)" (change)="checkItem(dataItem.common_id, $event.target.checked)" name="checkbox_{{dataItem.common_id}}">
             </label>
-			<!--<div class="row">-->
-				<!--<div class="col-md-12 text-center">-->
-					<!--<div class="checkbox checkbox-grid">-->
-
-					<!--</div>-->
-				<!--</div>-->
-			<!--</div>-->
 		</ng-template>
 	</kendo-grid-column>
 
