TM-12000 Display selected assets counter

--- a/web-app/tds/web-app/app-js/modules/assetExplorer/components/view-grid/asset-explorer-view-grid.component.html
+++ b/web-app/tds/web-app/app-js/modules/assetExplorer/components/view-grid/asset-explorer-view-grid.component.html
@@ -16,7 +16,7 @@
 			                        (clickBulk)="onClickBulkButton()"
 			                        (operationResult)="onBulkOperationResult($event)"></tds-bulk-change-button>
 			<div *ngIf="hasSelectedItems()" class="selected-assets">
-				Asset(s) selected <span class="badge badge-light">{{getSelectedItemsCount()}}</span>
+				<span class="badge badge-light">{{getSelectedItemsCount()}}</span><label>Asset(s) selected</label>
 			</div>
 		</div>
 	    <div class="col-sm-6 filters-section">
