--- a/web-app/tds/web-app/css/page/module/assetExplorer/asset-explorer-view-grid.component.sass
+++ b/web-app/tds/web-app/css/page/module/assetExplorer/asset-explorer-view-grid.component.sass
@@ -65,7 +65,11 @@
     .bulkchange-section
       .selected-assets
         margin-left: 10px
+        display: flex
+        align-items: baseline
+        label
+          font-weight: normal
         .badge-light
           background-color: #fff
           color: #777
-
+          margin-right: 5px
