--- a/web-app/tds/web-app/css/page/module/assetExplorer/asset-explorer-view-grid.component.sass
+++ b/web-app/tds/web-app/css/page/module/assetExplorer/asset-explorer-view-grid.component.sass
@@ -63,6 +63,17 @@
       justify-content: flex-end
 
     .bulkchange-section
+      .just-planning
+        margin-left: 12px
+        input
+          margin-left: 0
+          position: relative
+          margin-top: -1px
+        label
+          margin-top: -2px
+          position: absolute
+          padding-left: 2px
+          font-weight: normal
       .selected-assets
         margin-left: 10px
         display: flex
