--- a/web-app/tds/web-app/app-js/modules/importBatch/components/record/import-batch-record-fields.component.html
+++ b/web-app/tds/web-app/app-js/modules/importBatch/components/record/import-batch-record-fields.component.html
@@ -26,34 +26,45 @@
             </div>
         </ng-template>
         <kendo-grid-column title="Name" field="name"></kendo-grid-column>
-        <kendo-grid-column *ngIf="batchRecord.operation === BATCH_RECORD_OPERATION.INSERT && batchRecord.status.code === BatchStatus.PENDING"
-                           title="Current Value" [class]="'gray-background'">
-        </kendo-grid-column>
-        <kendo-grid-column *ngIf="batchRecord.operation === BATCH_RECORD_OPERATION.UPDATE && batchRecord.status.code === BatchStatus.PENDING"
-                           title="Current Value" field="currentValue">
-        </kendo-grid-column>
-        <kendo-grid-column *ngIf="batchRecord.status.code === BatchStatus.COMPLETED"
-                           title="Imported Value" [class]="'import-value'">
-	        <ng-template kendoGridCellTemplate let-dataItem>
-		        <div class="import-item-container">
-			        <input *ngIf="dataItem.importValue" type="text" class="import-value-input form-control" [(ngModel)]="dataItem.importValue" readonly/>
-			        <input *ngIf="!dataItem.importValue && dataItem.initValue" type="text" class="import-value-input form-control" [(ngModel)]="dataItem.initValue" readonly/>
-			        <i [ngClass]="{'has-init-value': !dataItem.importValue && dataItem.initValue}" *ngIf="dataItem.initValue" [title]="MESSAGE_FIELD_WILL_BE_INITIALIZED" class="fa fa-w fa-info"></i>
-		        </div>
-	        </ng-template>
+
+        <!-- Current / Previous Column Label -->
+        <!-- TODO change this method to a property on the component -->
+        <kendo-grid-column
+            title="{{currentPreviousColumnLabel}}"
+            field="currentPreviousValue"
+            [class]="batchRecord.operation === BATCH_RECORD_OPERATION.UPDATE ? '' : 'gray-background'"
+        >
         </kendo-grid-column>
 
-        <kendo-grid-column title="Import Value" *ngIf="showActionButtons()" [class]="'import-value'">
+        <!-- Imported Value Column Label -->
+        <kendo-grid-column title="Imported Value" [class]="'import-value'">
             <ng-template kendoGridCellTemplate let-dataItem>
                 <div class="import-item-container">
-                    <input *ngIf="(dataItem.importValue || dataItem.importValue === '' ) && !dataItem.initValue" type="text" class="import-value-input form-control" [(ngModel)]="dataItem.importValue" />
-	                <input *ngIf="!dataItem.importValue && dataItem.initValue" type="text"
-	                       class="import-value-input form-control has-init-value" [(ngModel)]="dataItem.initValue"/>
-	                <i [ngClass]="{'has-init-value': !dataItem.importValue && dataItem.initValue}"
-                       *ngIf="!dataItem.importValue && dataItem.initValue" [title]="MESSAGE_FIELD_WILL_BE_INITIALIZED" class="fa fa-w fa-info"></i>
+                    <div *ngIf="dataItem.currentValueAction == CurrentValueAction.ShowValue"
+                        [style.font-weight]="dataItem.modified === true ? 'bold' : 'normal'">
+                        {{dataItem.importValue}}
+                    </div>
+                    <div *ngIf="dataItem.currentValueAction == CurrentValueAction.ShowInit" class="has-init-value">
+                        {{dataItem.initValue}}
+                    </div>
+                    <input *ngIf="dataItem.currentValueAction == CurrentValueAction.EditValue"
+                        type="text"
+                        class="import-value-input form-control"
+                        [(ngModel)]="dataItem.importValue"
+                    />
+                    <input *ngIf="dataItem.currentValueAction == CurrentValueAction.EditInit"
+                        type="text"
+                        class="has-init-value import-value-input form-control"
+                        [(ngModel)]="dataItem.initValue"
+                    />
+                    <span *ngIf="(dataItem.currentValueAction == CurrentValueAction.ShowInit || dataItem.currentValueAction == CurrentValueAction.EditInit)">
+                        <i [title]="MESSAGE_FIELD_WILL_BE_INITIALIZED" class="fa fa-w fa-info"></i>
+                    </span>
                 </div>
             </ng-template>
         </kendo-grid-column>
+
+        <!-- Errors Column -->
         <kendo-grid-column title="Error(s)">
             <ng-template kendoGridCellTemplate let-dataItem >
                 <div *ngFor="let error of dataItem.errors" class="error">
