TM-12000 Add id to tds-checkbox component

--- a/web-app/tds/web-app/app-js/modules/assetExplorer/components/view-grid/asset-explorer-view-grid.component.html
+++ b/web-app/tds/web-app/app-js/modules/assetExplorer/components/view-grid/asset-explorer-view-grid.component.html
@@ -38,6 +38,7 @@
 				    <tds-checkbox name="assetsSelector"
 				                  [hasThirdState]="true"
 				                  (changeState)="onChangeBulkCheckbox($event)"
+				                  id="assetSelector"
 				                  [setStateSubject]="bulkCheckboxService.setStateSubject"></tds-checkbox>
 			    </div>
 		    </div>
