TM-12002 Adding the Tag to the Edit Views on the Asset Legacy

--- a/web-app/css/style.sass
+++ b/web-app/css/style.sass
@@ -46,6 +46,7 @@
 /* Migration CSS, after migrate one entire module, delete their css */
 @import "page/module/assets/assetSummary"
 @import "page/module/assets/assetList"
+@import "page/module/assets/assetEntitiesDialog"
 @import "page/module/assets/dependencyAnalyzer"
 @import "page/module/assets/architectureGraph"
 @import "page/module/administration/administration"
